<resources>
    <string name="app_name">Meditation</string>
    <string name="what_we_are_do">We are what we do</string>
    <string name="people_using_app">Thousand of people are using silent moon for smalls meditation</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_and_acc">ALREADY HAVE AN ACCOUNT?</string>
    <string name="login">LOG IN</string>
    <string name="save_new_pass">Save Password</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="silent_logo">S i l e n t</string>
    <string name="moon_logo">M o o n</string>
    <string name="logo_desc">Brand Logo</string>
    <string name="frame_img_desc">Frame Image</string>
    <string name="password">Password</string>
    <string name="re_password">Re Password</string>
    <string name="email">Email address</string>
    <string name="username">Username</string>
    <string name="or_login_email">OR LOG IN WITH EMAIL</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="reenter_password">Reenter New Password</string>
    <string name="continue_google">CONTINUE WITH GOOGLE</string>
    <string name="continue_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_acc">Create your account</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="enter_login_email">Enter Login Email</string>
    <string name="sure_to_exit">Are You Sure Want To Exit ??</string>
    <string name="i_have_read">I have read the</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="get_start">GET STARTED</string>
    <string name="add_img">ADD MORE IMAGE</string>
    <string name="hi_msg">Hi</string>
    <string name="user">User</string>
    <string name="your_img_gallery">Your Image Gallery</string>
    <string name="welcome_msg">Welcome</string>
    <string name="welcome_app_msg">to Silent Moon</string>
    <string name="explore_app_find_some_peace">Explore the app, Find some peace of mind to prepare for meditation.</string>
    <string name="what_brings">What Brings you </string>
    <string name="silent_moon">to Silent Moon?</string>
    <string name="choose_topic">choose a topic to focus on:</string>
    <string name="reduce_stress">Reduce Stress</string>
    <string name="improve_performance">Improve \nPerformance</string>
    <string name="increase_happiness">Increase \nHappiness</string>
    <string name="reduce_anxiety">Reduce Anxiety</string>
    <string name="personal_growth">Personal \nGrowth</string>
    <string name="better_sleep">Better Sleep</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_sleep">Sleep</string>
    <string name="title_meditate">Meditate</string>
    <string name="title_music">Music</string>
    <string name="title_profile">profile</string>
    <string name="hello">Hello,</string>
    <string name="good_morning_msg_Home">Good Morning,</string>
    <string name="good_afternoon_msg_Home">Good Afternoon,</string>
    <string name="good_evening_msg_Home">Good Evening,</string>
    <string name="good_night_msg_Home">Good Night,</string>
    <string name="happiness">Happiness</string>
    <string name="happy_morning">Happy Morning</string>
    <string name="happy_day">Happy Day</string>
    <string name="happy_afternoon">Happy Afternoon</string>
    <string name="happy_evening">Happy Evening</string>
    <string name="happy_night">Happy Night</string>
    <string name="good_wish_msg_Home">We Wish you have a good day</string>
    <string name="basics">Basics</string>
    <string name="course">COURSE</string>
    <string name="relaxation">Relaxation</string>
    <string name="music">MUSIC</string>
    <string name="three_to_ten_min">3–10 MIN</string>
    <string name="daily_thought">Daily Thought</string>
    <string name="meditation_min">
MEDITATION
<b> · </b>
3–10 MIN
</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="focus">Focus</string>
    <string name="mind_into_restful_with_ambient_tones">Ease the mind into a restful night’s sleep with these deep, ambient tones.</string>
    <string name="favorites">Favorites</string>
    <string name="listening_number">34.234 Listening</string>
    <string name="pick_narrator">Pick a Narrator</string>
    <string name="male_voice">MALE VOICE</string>
    <string name="female_voice">FEMALE VOICE</string>
    <string name="focus_attention">Focus Attention</string>
    <string name="two_min_twenty_five_sec">2:25</string>
    <string name="body_scan">Body Scan</string>
    <string name="making_happiness">Making Happiness </string>
    <string name="one_min_fifty_eight_sec">1:58</string>
    <string name="three_min_nineteen_sec">3:19</string>
    <string name="meditate">Meditate</string>
    <string name="learn_mind_doing_acrobatics">we can learn how to recognize when our minds are doing their normal everyday acrobatics.</string>
    <string name="all">All</string>
    <string name="my">My</string>
    <string name="anxious">Anxious</string>
    <string name="kids">Kids</string>
    <string name="daily_clam">Daily Calm</string>
    <string name="pause_practice">APR 30 · PAUSE PRACTICE</string>
    <string name="seven_days_clam">7 Days Of Clam</string>
    <string name="meditate_music">MEDITATE MUSIC</string>
    <string name="anxiety_release">Anxiety Release</string>
    <string name="sleep_rv_meditate">Sleep Fragment Recycler View Meditate</string>
    <string name="all_rv_meditate">All Fragment Recycler View Meditate</string>
    <string name="my_rv_meditate">My Fragment Recycler View Meditate</string>
    <string name="anxious_rv_meditate">Anxious Fragment Recycler View Meditate</string>
    <string name="kids_rv_meditate">Kids Fragment Recycler View Meditate</string>
    <string name="wlc_sleep">Welcome To Sleep</string>
    <string name="explore_sleep_uses_sound_create_conditions_refreshing_Sleep">Explore the new king of sleep. It uses sound and visualization to create perfect conditions for refreshing sleep. </string>
    <string name="sleep_stories">Sleep Stories</string>
    <string name="bedtime_stories_help_into_deep_natural_sleep">Soothing bedtime stories to help you fall into a deep and natural sleep</string>
    <string name="ocean_moon">The Ocean Moon</string>
    <string name="non_stop_eight_hour_sleep_audio">Non-stop 8-hour mixes of our most popular sleep audio</string>
    <string name="night_island">Night Island</string>
    <string name="sweet_sleep">Sweet Sleep</string>
    <string name="good_night">Good Night</string>
    <string name="moon_cloud">Moon Cloud</string>
    <string name="min_sleep_music"> MIN · SLEEP MUSIC</string>
    <string name="sleep_rv_sleep">Sleep Fragment Recycler View Sleep</string>
    <string name="all_rv_sleep">All Fragment Recycler View Meditate Sleep</string>
    <string name="my_rv_sleep">My Fragment Recycler View Meditate Sleep</string>
    <string name="anxious_rv_sleep">Anxious Fragment Recycler View Meditate Sleep</string>
    <string name="kids_rv_sleep">Kids Fragment Recycler View Meditate Sleep</string>
    <string name="related">Related</string>
    <string name="play">PLAY</string>
    <string name="sleep_music">Sleep Music</string>
    <string name="log_out">LOG OUT</string>
    <string name="minute">00:00</string>
    <string name="two_min_thirty_one_sec">2:31</string>
    <string name="two_min_fourteen_sec">2:14</string>
    <string name="two_min_twenty_nine_sec">2:29</string>
    <string name="one_min_forty_nine_sec">1:49</string>
    <string name="four_min">4:00</string>
    <string name="one_min_forty_three_sec">1:43</string>
    <string name="one_min_twenty_five_sec">1:25</string>
    <string name="three_min_twenty_nine_sec">3:29</string>
    <string name="two_min_forty_eight_sec">2:48</string>
    <string name="song_img">Song Image</string>
    <string name="frame_background">Frame Background</string>
    <string name="toolbar_image">Toolbar Image</string>
    <string name="back_button">Back Button</string>
    <string name="like_button">Like Button</string>
    <string name="download_button">Download Button</string>
    <string name="head_phone_image">Head Phone Image</string>
    <string name="moon_image">Moon Image</string>
    <string name="birds_image">Birds Image</string>
    <string name="home_icon">Home Icon</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="music_icon">Music Icon</string>
    <string name="meditate_icon">Meditate Icon</string>
    <string name="sleep_icon">Sleep Icon</string>
    <string name="second_backward_button">Second Backward Button</string>
    <string name="play_pause_button">Play Pause Button</string>
    <string name="second_forward_button">Second Forward Button</string>
    <string name="vertical_line">Vertical Line</string>
    <string name="background_image">Background Image</string>
    <string name="icon">Icon</string>
    <string name="start_button">Start Button</string>
    <string name="previous_music_button">previous_music_button</string>
    <string name="next_music_button">Next Music Button</string>
    <string name="sleep_music_play">SLEEP MUSIC</string>
    <string name="liked_icon">liked_icon</string>
    <string name="beauty">Beauty</string>
    <string name="relaxing_piano">Relaxing Piano</string>
    <string name="harmony_of_earth">Harmony Of Earth</string>
    <string name="flute">Flute</string>
    <string name="your_history">Your History</string>
    <string name="guitar">Guitar</string>
    <string name="rename">Rename</string>
    <string name="select_your_img">Select Your Image</string>
    <string name="remove_from_like">Remove From Like</string>
    <string name="remove_from_download">Remove From Download</string>
    <string name="sure_to_logout">Are You sure To Logout ??</string>
    <string name="default_web_client_id">452510648162-b321omqiqam4md9qtvgrgqf2n44fmjul.apps.googleusercontent.com</string>
    <string name="permission_desc">You have previously declined this permission. \nYou must approve this permission in \"Permissions\" in the app settings on your device.</string>
    <string name="setting">Settings</string>
    <string name="open_camera">Open Camera</string>
</resources>